# Marketplace

./: README.md  pyproject.toml
skymarket/ads/: filters.py  models.py  serializers.py  urls.py  views.py
skymarket/ads/migrations/: 0001_initial.py
skymarket/fixtures/: ad.json
skymarket/skymarket/: settings.py  urls.py
skymarket/users/: managers.py  models.py  urls.py
skymarket/users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py
