[tool.poetry]
name = "coursework-6"
version = "0.1.0"
description = ""
authors = ["Televizor1945 <kurochkin.egor1993@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_6"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
asgiref = "^3.5.2"
black = "22.1.0"
certifi = "2021.10.8"
platformdirs = "2.5.2"
drf-spectacular = "^0.24.2"
django-cors-headers = "^3.13.0"
python-dotenv = "^0.21.0"
djoser = "^2.1.0"
pillow = "^9.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
